finish class worck

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,108 @@
             </div>
         </div>
     </section>
+    <section class="tehnologic">
+        <div class="container">
+            <h2 class="title title_fz16 tehnologic__title"  > Навыки</h2>
+            <div class="title title_center ">Что я использую в работе</div>
+            <div class="tehnologic__dividers"></div>
+            <div class="tehnologic__wrapper">
+                <div class="tehnologic__item">
+                    <img src="icons/skills/html5.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>HTML5</b>  </div>
+                    <div class="title title_fz12 title__p"><br> Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/css3.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>CSS3</b> </div>
+                    <div class="title title_fz12 title__p"><br> Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/js.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>Java Script</b> </div>
+                    <div class="title title_fz12 title__p"><br> Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/jquery.svg" alt="" class="tehnologic__img tehnologic__jquery">
+                    <div class="title title_fz14 title__p"> <br> <b>Jquery</b> </div>
+                    <div class="title title_fz12 title__p"><br> Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/react.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>React</b> </div>
+                    <div class="title title_fz12 title__p"><br> Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/node.js.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>Node.js</b> </div>
+                    <div class="title title_fz12 title__p"><br> Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+                </div>
+                <div class="tehnologic__item">
+                    <img src="icons/skills/html5.svg" alt="" class="tehnologic__img">
+                    <div class="title title_fz14 title__p"> <br> <b>Mongo.db</b> </div>
+                    <div class="title title_fz12 title__p"><br> Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+            </div>
+
+
+            <div class="tehnologic__wrapper1">
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                        <div class="tehnologic__desc"><b>Создание сайтов</b></div>
+                        <div class="tehnologic__procent">100%</div>
+                        </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider"style="width:80% ;"></div>
+                    </div>
+                </div>
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                        <div class="tehnologic__desc"><b>Создание приложений</b></div>
+                        <div class="tehnologic__procent">100%</div>
+                        </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider" style="width:30% ;"></div>
+                    </div>
+                </div>
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                        <div class="tehnologic__desc"><b>Работа с данными</b></div>
+                        <div class="tehnologic__procent">100%</div>
+                        </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider" style="width:40% ;"></div>
+                    </div>
+                </div>
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                        <div class="tehnologic__desc"><b>Креативность</b></div>
+                        <div class="tehnologic__procent">100%</div>
+                        </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider "style="width:90% ;"></div>
+                    </div>
+                </div>
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                        <div class="tehnologic__desc"><b>Создание дизайна</b></div>
+                        <div class="tehnologic__procent">100%</div>
+                        </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider" style="width:10% ;" ></div>
+                    </div>
+                </div>
+                <div class="tehnologic__item-level">
+                    <div class="tehnologic__item-block">
+                    <div class="tehnologic__desc"><b>Soft skills</b></div>
+                    <div class="tehnologic__procent">100%</div>
+                    </div>
+                    <div class="tehnologic__block">
+                        <div class="tehnologic__divider" style="width:60% ;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
