--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
     </section>
     <section class="resume">
         <div class="container">
-            <h2 class="title title_fz16 resume__title"  > Опыт</h2>
+            <h2 class="title title_fz16 resume__title" > Опыт</h2>
             <div class="title resume__subtitle">Чем я буду полезен</div>
             <div class="resume__divider"></div>
 
@@ -254,28 +254,28 @@
                 <div class="tehnologic__item-level">
                     <div class="tehnologic__item-block">
                         <div class="tehnologic__desc"><b>Создание сайтов</b></div>
-                        <div class="tehnologic__procent">100%</div>
+                        <div class="tehnologic__procent">50%</div>
                         </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider"style="width:80% ;"></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
                 <div class="tehnologic__item-level">
                     <div class="tehnologic__item-block">
                         <div class="tehnologic__desc"><b>Создание приложений</b></div>
-                        <div class="tehnologic__procent">100%</div>
+                        <div class="tehnologic__procent">50%</div>
                         </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider" style="width:30% ;"></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
                 <div class="tehnologic__item-level">
                     <div class="tehnologic__item-block">
                         <div class="tehnologic__desc"><b>Работа с данными</b></div>
-                        <div class="tehnologic__procent">100%</div>
+                        <div class="tehnologic__procent">10%</div>
                         </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider" style="width:40% ;"></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
                 <div class="tehnologic__item-level">
@@ -284,7 +284,7 @@
                         <div class="tehnologic__procent">100%</div>
                         </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider "style="width:90% ;"></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
                 <div class="tehnologic__item-level">
@@ -293,18 +293,46 @@
                         <div class="tehnologic__procent">100%</div>
                         </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider" style="width:10% ;" ></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
                 <div class="tehnologic__item-level">
                     <div class="tehnologic__item-block">
                     <div class="tehnologic__desc"><b>Soft skills</b></div>
-                    <div class="tehnologic__procent">100%</div>
+                    <div class="tehnologic__procent">20%</div>
                     </div>
                     <div class="tehnologic__block">
-                        <div class="tehnologic__divider" style="width:60% ;"></div>
+                        <div class="tehnologic__divider"></div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 tehnologic__title"  > Портфолио</h2>
+            <div class="title title_center ">Мои работы</div>
+            <div class="tehnologic__dividers"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="/uber" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="/puls" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="pulse">
+                </a>
+                <a href="" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="plans">
+                </a>
+                <a href="" class="portfolio__item vertical">
+                    <img src="img/works/plans.jpg" alt="ipad">
+                </a>
+                <a href="" class="portfolio__item">
+                    <img src="img/works/ipad.jpg" alt="mac">
+                </a>
+                <a href="" class="portfolio__item horizonal">
+                    <img src="img/works/mac.jpg" alt="bread">
+                </a>
             </div>
         </div>
     </section>
