--- a/src/index.html
+++ b/src/index.html
@@ -336,6 +336,55 @@
             </div>
         </div>
     </section>
+    <section class="price" >
+        <div class="container">
+            <h2 class="title title_fz16 tehnologic__title"  > Прайс-лист</h2>
+            <div class="tehnologic__dividers"></div>
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <ul>
+                        <div class="price__item-block">
+                        <li class="price__title">Landing-page</li>
+                        <li class="price__prices">от 8000 руб.</li>
+                        <li class="price__descr vertica">Одностраничный сайт для презентации услуг/товаров/...</li>
+                        </div>
+                        <div class="price__item-block">
+                            <li class="price__title">Корпоративный сайт</li>
+                            <li class="price__prices">от 20000 руб.</li>
+                            <li class="price__descr vertica">Сайт для вашего бизнеса или компании</li>
+                            </div>
+                            <div class="price__item-block">
+                                <li class="price__title">Интернет-магазин</li>
+                                <li class="price__prices">от 30000 руб.</li>
+                                <li class="price__descr vertica">Инструмент для ваших продаж в сети</li>
+                                </div>
+                                    
+
+                        
+                    </ul>
+                </div>
+                <div class="price__item">
+                    <ul>
+                        <div class="price__item-block">
+                            <li class="price__title">Web-приложение</li>
+                            <li class="price__prices">от 28000 руб.</li>
+                            <li class="price__descr vertica">Приложение внутри браузера для лучшего комфорта</li>
+                            </div>
+                            <div class="price__item-block">
+                                <li class="price__title">Android/IOS Приложение</li>
+                                <li class="price__prices">от 25000 руб.</li>
+                                <li class="price__descr vertica">Приложение для смартфона любой ОС</li>
+                                </div>
+                                <div class="price__item-block">
+                                    <li class="price__title">Дизайн</li>
+                                    <li class="price__prices">от 8000 руб.</li>
+                                    <li class="price__descr vertica">Создам дизайн для вашего сайта/приложения...</li>
+                                    </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
