--- a/src/index.html
+++ b/src/index.html
@@ -385,6 +385,44 @@
             </div>
         </div>
     </section>
+    <section class="contackts" >
+        <div class="container">
+            <div class="contackts__wrapper">
+                <div class="contackts__photo">
+                    <img src="img/photo.jpg" alt="" >
+                </div>
+            <div class="contackts__descr">
+                <h2 class="title title_fz16 promo__mix contackts__title">Контакты</h2>
+                    <div class="title contackts__title">Свяжитесь со мной</div>
+                    <div class="skill__divider contackts__deivider"></div>
+                    <div class="title title_fz14 contackts__text"><b>Любым удобным для вас способом:</b> </div>
+                    <div class="contackts__social">
+                        <a href="" class="contackts__link"><img class="img-svg " src="icons/social/Facebook1.svg" alt="facebook"></a>
+                        <a href="" class="contackts__link"><img class="img-svg " src="icons/social/Telegram1.svg" alt="telegram"></a>
+                        <a href="" class="contackts__link"><img class="img-svg " src="icons/social/Instagram1.svg" alt="instagram"></a>
+                    </div>
+                    <div class="title title_fz14 contackts__text"><b>Или оставьте ваши данные и я сама вам напишу:</b> </div>
+
+
+                    <form action="#" class="contackts__form">
+                        <div  class="contackts__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contackts__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contackts__textarea">
+                            <textarea name="text" id="text" ></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div><button class="contackts__btn btn">Отправить сообщение</button></div>
+                    </form>
+            </div>
+        </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
